[macos] Native library libjfxwebkit.dylib contains deprecated API

XMLWordPrintable

    • web
    • aarch64
    • os_x

      ADDITIONAL SYSTEM INFORMATION :
      MacOS 12.4
      JavaFX 18

      A DESCRIPTION OF THE PROBLEM :
      In order to publish JavaFX APP to MacOS Apple Store the native lib must not contain deprecated API.

      The library libjfxwebkit.dylib uses the following deprecated API:
      Symbols: _cache_simulate_memory_warning_event

      The use of non-public or deprecated APIs is not permitted on the App Store, as they can lead to a poor user experience should these APIs change and are otherwise not supported on Apple platforms.
       
      I analyzed the native source code and found this reference in MemoryPressureHandlerCocoa.mm
      in folder jfx/modules/javafx.web/src/main/native/Source/WTF/wtf/cocoa/

      STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
      Compile native source of module jfx web

      EXPECTED VERSUS ACTUAL BEHAVIOR :
      EXPECTED -
      No deprecated API found
      ACTUAL -
      Deprecated API

      FREQUENCY : always


            Assignee:
            Jay Bhaskar
            Reporter:
            Webbug Group
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated: