8289521: Removed call to Apples internal method "cache_simulate_memory_warning_event" which prevented publication to their App Store